--- a/app/src/main/res/layout/item_road.xml
+++ b/app/src/main/res/layout/item_road.xml
@@ -3,20 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp">
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:background="@drawable/rect">
 
     <TextView
         android:id="@+id/tvRoadAddr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
+        android:textColor="#272727"
         android:textSize="18sp"/>
     <TextView
         android:id="@+id/tvJibunAddr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:textSize="18sp"/>
+        android:layout_marginStart="23dp"
+        android:textColor="#525151"
+        android:textSize="15sp"/>
 
 </LinearLayout>
